; ModuleID = '/home/carl/AnghaBench/libui/unix/extr_debug.c_uiprivRealBug.c'
source_filename = "/home/carl/AnghaBench/libui/unix/extr_debug.c_uiprivRealBug.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [22 x i8] c"[libui] %s:%s:%s() %s\00", align 1
@.str.1 = private unnamed_addr constant [5 x i8] c"%s%s\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @uiprivRealBug(i8* %0, i8* %1, i8* %2, i8* %3, i8* %4, i32 %5) #0 {
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i8*, align 8
  %14 = alloca i8*, align 8
  store i8* %0, i8** %7, align 8
  store i8* %1, i8** %8, align 8
  store i8* %2, i8** %9, align 8
  store i8* %3, i8** %10, align 8
  store i8* %4, i8** %11, align 8
  store i32 %5, i32* %12, align 4
  %15 = load i8*, i8** %7, align 8
  %16 = load i8*, i8** %8, align 8
  %17 = load i8*, i8** %9, align 8
  %18 = load i8*, i8** %10, align 8
  %19 = call i8* @g_strdup_printf(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0), i8* %15, i8* %16, i8* %17, i8* %18)
  store i8* %19, i8** %13, align 8
  %20 = load i8*, i8** %11, align 8
  %21 = load i32, i32* %12, align 4
  %22 = call i8* @g_strdup_vprintf(i8* %20, i32 %21)
  store i8* %22, i8** %14, align 8
  %23 = load i8*, i8** %13, align 8
  %24 = load i8*, i8** %14, align 8
  %25 = call i32 @g_critical(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0), i8* %23, i8* %24)
  %26 = call i32 (...) @G_BREAKPOINT()
  ret void
}

declare dso_local i8* @g_strdup_printf(i8*, i8*, i8*, i8*, i8*) #1

declare dso_local i8* @g_strdup_vprintf(i8*, i32) #1

declare dso_local i32 @g_critical(i8*, i8*, i8*) #1

declare dso_local i32 @G_BREAKPOINT(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
